add system to resolve application via dns and add overrides config
Signed-off-by: BlackEagle <ike.devolder@gmail.com>

--- a/mainline/scripts/etc/nginx/conf.d/default.conf
+++ b/mainline/scripts/etc/nginx/conf.d/default.conf
@@ -1,11 +1,14 @@
 # vi: ft=nginx:
 server {
-    listen      80;
+    listen 80 default_server;
     server_name default;
-    root        /phpapp/web;
-    index       app.php;
+    root /phpapp;
+    index index.php;
+    autoindex off;
+    charset UTF-8;
 
-    include /etc/nginx/include/pimcore.conf;
+    include /etc/nginx/include/internals.conf;
+    include /etc/nginx/include/overrides.conf;
 
     # Pimcore Head-Link Cache-Busting
     rewrite ^/cache-buster-(?:\d+)/(.*) /$1 last;
