--- a/stable/scripts/etc/nginx/conf.d/default.conf
+++ b/stable/scripts/etc/nginx/conf.d/default.conf
@@ -2,7 +2,7 @@
 server {
     listen 80 default_server;
     server_name default;
-    root /phpapp;
+    root /phpapp/web;
     index index.php;
     autoindex off;
     charset UTF-8;
