use app.php instead of index.php
Signed-off-by: BlackEagle <ike.devolder@gmail.com>

--- a/mainline/scripts/etc/nginx/conf.d/default.conf
+++ b/mainline/scripts/etc/nginx/conf.d/default.conf
@@ -3,7 +3,7 @@ server {
     listen 80 default_server;
     server_name default;
     root /phpapp/web;
-    index index.php;
+    index app.php;
     autoindex off;
     charset UTF-8;
 
@@ -63,10 +63,6 @@ server {
         try_files $uri /app.php$is_args$args;
     }
 
-    # Use this location when the installer has to be run
-    # location ~ /(app|install)\.php(/|$) {
-    #
-    # Use this after initial install is done:
     location ~ ^/app\.php(/|$) {
         # set upstream
         set $upstream application:9000;
