--- a/stable/scripts/etc/nginx/conf.d/default.conf
+++ b/stable/scripts/etc/nginx/conf.d/default.conf
@@ -49,7 +49,7 @@ server {
 
     # Assets
     # Still use a whitelist approach to prevent each and every missing asset to go through the PHP Engine.
-    location ~* (.+?)\.((?:css|js)(?:\.map)?|jpe?g|gif|png|svgz?|eps|exe|gz|zip|mp\d|ogg|ogv|webm|pdf|docx?|xlsx?|pptx?)$ {
+    location ~* (.+?)\.((?:css|js)(?:\.map)?|jpe?g|gif|png|svgz?|eps|exe|gz|zip|mp\d|ogg|ogv|webm|pdf|docx?|xlsx?|pptx?|ttf|otf|woff|woff2)$ {
         try_files /var/assets$uri $uri =404;
         expires 2w;
         access_log off;
