--- a/stable/scripts/etc/nginx/include/application.conf
+++ b/stable/scripts/etc/nginx/include/application.conf
@@ -9,7 +9,7 @@ rewrite ^/cache-buster-(?:\d+)/(.*) /$1 last;
 # Stay secure
 #
 # a) don't allow PHP in folders allowing file uploads
-location ~* /var/assets/*\.php(/|$) {
+location ~* /var/assets/.*\.php(/|$) {
     return 404;
 }
 # b) Prevent clients from accessing hidden files (starting with a dot)
@@ -34,7 +34,7 @@ location ~* ^/admin/(adminer|external) {
 
 # Thumbnails
 location ~* .*/(image|video)-thumb__\d+__.* {
-    try_files /var/tmp/$1-thumbnails$request_uri /app.php;
+    try_files /var/tmp/$1-thumbnails$uri /app.php;
     expires 2w;
     access_log off;
     add_header Cache-Control "public";
@@ -42,7 +42,7 @@ location ~* .*/(image|video)-thumb__\d+__.* {
 
 # Assets
 # Still use a whitelist approach to prevent each and every missing asset to go through the PHP Engine.
-location ~* (.+?)\.((?:css|js)(?:\.map)?|jpe?g|gif|png|svgz?|eps|exe|gz|zip|mp\d|ogg|ogv|webm|pdf|docx?|xlsx?|pptx?|ttf|otf|woff|woff2)$ {
+location ~* ^(?!/admin)(.+?)\.((?:css|js)(?:\.map)?|jpe?g|gif|png|svgz?|eps|exe|gz|zip|mp\d|ogg|ogv|webm|pdf|docx?|xlsx?|pptx?|ttf|otf|woff|woff2)$ {
     try_files /var/assets$uri $uri =404;
     expires 2w;
     access_log off;
@@ -52,7 +52,6 @@ location ~* (.+?)\.((?:css|js)(?:\.map)?|jpe?g|gif|png|svgz?|eps|exe|gz|zip|mp\d
 
 location / {
     error_page 404 /meta/404;
-    add_header "X-UA-Compatible" "IE=edge";
     try_files $uri /app.php$is_args$args;
 }
 
