make sure the php location is hit
Signed-off-by: BlackEagle <ike.devolder@gmail.com>

--- a/mainline/scripts/etc/nginx/include/application.conf
+++ b/mainline/scripts/etc/nginx/include/application.conf
@@ -55,7 +55,7 @@ location / {
     try_files $uri /app.php$is_args$args;
 }
 
-location ~ ^/app\.php(/|$) {
+location ~ app\.php(/|$) {
     # set upstream
     set $upstream application:9000;
 
