--- a/stable/scripts/etc/nginx/include/application.conf
+++ b/stable/scripts/etc/nginx/include/application.conf
@@ -55,7 +55,7 @@ location / {
     try_files $uri /app.php$is_args$args;
 }
 
-location ~ ^/app\.php(/|$) {
+location ~ app\.php(/|$) {
     # set upstream
     set $upstream application:9000;
 
